# Whisper-CC-VideoMobileApp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Get-ChildItem.ps1  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/templates/: readme-header.md  usage.md
.github/workflows/: build-android.yml
android/: CMakeLists.txt  README_sources.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle  whisper_stub.cpp
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/lib/: fonts.ts
app/lib/captions/: ffmpeg.ts  srt.ts
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/autocap/whisper/: WhisperModule.java
scripts/: build-release-aab.sh  build-release-apk.sh  entrypoint.sh  postprocess-video.sh  sign-release.sh  update-readme-workflow.sh  verify-env.sh
